src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountRecord_Type_Hidden__c</fullName>
        <label>AccountRecord Type (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_18__c</fullName>
        <description>Case insensitive 18-character identifier for Account</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Case insensitive 18-character identifier for Account</inlineHelpText>
        <label>Account Number-18</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SFDC_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Account SFDC Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_has_no_working_opps__c</fullName>
        <description>Counts the number of opportunities in the account that are being actively worked (everything up to full proposal submitted)</description>
        <inlineHelpText>Counts the number of opportunities in the account that are being actively worked (everything up to full proposal submitted)</inlineHelpText>
        <label>Account&apos;s Active Opportunities</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Target Identified, Pitched/Qualifying, Interest/Development, Commitment, Pre-Proposal Submitted (Round 1), Pre-Proposal Approved, Full Proposal Submitted (Round 2)</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to set unapproved industry partners different from active/approved industry partners</description>
        <inlineHelpText>Has passed all approvals and active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Also_an_edX_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box to determine if a partner is also an edX partner or in negotiations to become one.</description>
        <inlineHelpText>Please check this box if this partner is also an edX partner or in negotiations to become one. Leave unchecked if they are not.</inlineHelpText>
        <label>Also an edX Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>B2B_Account_Status__c</fullName>
        <description>If any opportunity in the account is won and its contract end date is &gt;=TODAY, then this is automatically updated to Active; otherwise Prospect</description>
        <inlineHelpText>If any opportunity in the account is won and its contract end date is &gt;=TODAY, then this is automatically updated to Active; otherwise Prospect</inlineHelpText>
        <label>B2B Account Status</label>
        <summaryFilterItems>
            <field>Opportunity.Probability</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>B2B_Acct_Status__c</fullName>
        <description>If the account has an opportunity that is won and its contract end date &gt;= today, then Active; otherwise Prospect</description>
        <formula>if( B2B_Account_Status__c &gt;0,&quot;Active&quot;,&quot;Prospect&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the account has an opportunity that is won and its contract end date &gt;= today, then Active; otherwise Prospect</inlineHelpText>
        <label>B2B Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Status__c</fullName>
        <inlineHelpText>Active or prospect account in B2B space</inlineHelpText>
        <label>zB2B Status (Deprecated)</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Clickthrough_Addendum_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clickthrough Addendum Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Continent__c</fullName>
        <formula>CASE( BillingCountry,
&apos;AR&apos;, &apos;SA&apos;,
&apos;AU&apos;, &apos;OC&apos;,
&apos;BE&apos;, &apos;EU&apos;,
&apos;BR&apos;, &apos;SA&apos;,
&apos;CA&apos;, &apos;NA&apos;,
&apos;CH&apos;, &apos;EU&apos;,
&apos;CL&apos;, &apos;SA&apos;,
&apos;CN&apos;, &apos;AS&apos;,
&apos;CO&apos;, &apos;SA&apos;,
&apos;DE&apos;, &apos;EU&apos;,
&apos;DK&apos;, &apos;EU&apos;,
&apos;ES&apos;, &apos;EU&apos;,
&apos;FR&apos;, &apos;EU&apos;,
&apos;GB&apos;, &apos;EU&apos;,
&apos;IE&apos;, &apos;EU&apos;,
&apos;IL&apos;, &apos;AS&apos;,
&apos;IN&apos;, &apos;AS&apos;,
&apos;IT&apos;, &apos;EU&apos;,
&apos;JP&apos;, &apos;AS&apos;,
&apos;KR&apos;, &apos;AS&apos;,
&apos;MX&apos;, &apos;NA&apos;,
&apos;NL&apos;, &apos;EU&apos;,
&apos;RU&apos;, &apos;EU&apos;,
&apos;SE&apos;, &apos;EU&apos;,
&apos;SG&apos;, &apos;AS&apos;,
&apos;TR&apos;, &apos;EU&apos;,
&apos;TW&apos;, &apos;AS&apos;,
&apos;US&apos;, &apos;NA&apos;,
&apos;ZA&apos;, &apos;AF&apos;,
&quot;Please update this account&apos;s Billing Country&quot;)</formula>
        <inlineHelpText>Formula - based on Billing Country</inlineHelpText>
        <label>Continent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_from_website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked only if directly converted from website</description>
        <inlineHelpText>Checked only if directly converted from website</inlineHelpText>
        <label>Converted from website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Course_Certificate_Price__c</fullName>
        <description>(for ComOps) This is the default price for this partner&apos;s course certificate</description>
        <inlineHelpText>(for ComOps) This is the default price for this partner&apos;s course certificate</inlineHelpText>
        <label>Default Course Certificate Price</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details_of_Enterprise_Addendum_Feedback__c</fullName>
        <label>Details of Enterprise Addendum Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discussed_Q2_17_PLP_subscriptions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discussed PLP+subscriptions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discussed_Q416_Pricing_Experiments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the Partnership Manager discussed the Q4 2016 Pricing Experiments?</description>
        <inlineHelpText>Has the Partnership Manager discussed the Q4 2016 Pricing Experiments? Check if yes.</inlineHelpText>
        <label>Discussed Q416 Pricing Experiments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <description>Aggregates employees into bucket field</description>
        <formula>if(NumberOfEmployees &gt;5000,&quot;&gt;5000&quot;,
if(NumberOfEmployees &gt;1000,&quot;1001-5000&quot;,
if(NumberOfEmployees &gt;500,&quot;501-1000&quot;,
if(NumberOfEmployees &gt;150,&quot;151-500&quot;,
if(NumberOfEmployees &gt;50,&quot;51-150&quot;,
if(NumberOfEmployees &gt;10,&quot;11-50&quot;,
&quot;1-10&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aggregates # employees into bucketed groups</inlineHelpText>
        <label>Employee Range</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enterprise_Addendum_Feedback__c</fullName>
        <label>Enterprise Addendum Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative/Push Back</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_Reaction__c</fullName>
        <label>Enterprise Reaction</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indifferent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative/Concerned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Feedback_about_Q2_17_PLP_subscriptions__c</fullName>
        <label>Feedback about PLP+subscriptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_about_Q416_Pricing_Experiements__c</fullName>
        <label>Feedback about Q416 Pricing Experiements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Government__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the account is a government entity</description>
        <inlineHelpText>Checked if the account is a government entity</inlineHelpText>
        <label>Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Open_Opps_Commitment__c</fullName>
        <description>TRUE if open opps; FALSE if no open opps in commitment stage (or earlier)</description>
        <inlineHelpText>Checked automatically if there are open opps in commentment stage (or earlier) in the account; not checked if there are no open opps</inlineHelpText>
        <label>Has Open Opps &lt;= Commitment</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Target Identified, Pitched/Qualifying, Interest/Development, Commitment</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Open_Opps_Full_Approved__c</fullName>
        <description>TRUE if won opps; FALSE if no won opps</description>
        <inlineHelpText>Checked automatically if there are opps in full proposal approved stage in the account; not checked if there are no won opps (or the only ones in the account are already launched)</inlineHelpText>
        <label>Has Open Opps = Full Approved</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Full Proposal Accepted</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Open_Opps_Launched__c</fullName>
        <description>Has a launched opportunity</description>
        <inlineHelpText>Checked if the account has a launched opportunity; false if no launched opportunities</inlineHelpText>
        <label>Has Open Opps = Launched</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Launched</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Has_Open_Opps_Proposal_Opsn__c</fullName>
        <description>TRUE if open opps; FALSE if no open opps in proposal open stages</description>
        <inlineHelpText>Checked automatically if there are open opps in pre-proposal-&gt;proposal stages in the account; not checked if there are no open opps</inlineHelpText>
        <label>Has Open Opps &lt;= Proposal Open</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Pre-Proposal Submitted (Round 1), Pre-Proposal Approved, Full Proposal Submitted (Round 2)</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Hidden_Employee_Range_from_Lead__c</fullName>
        <label>(Hidden) Employee Range from Lead</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Industry_Notes__c</fullName>
        <description>Hidden description of industry</description>
        <inlineHelpText>Hidden description of industry</inlineHelpText>
        <label>(Hidden) Industry Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import2_Id__c</fullName>
        <description>Id of the record in original system, where it was imported from by Import2.com</description>
        <externalId>true</externalId>
        <label>Import2 Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Account_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates if Industry partner account is rejected internally at coursera or by UAB</description>
        <inlineHelpText>Select this checkbox if industry partner is rejected Internally or by UAB</inlineHelpText>
        <label>Is Account Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nonprofit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if account is a nonprofit or 501c3</description>
        <inlineHelpText>Checked if account is a nonprofit or 501c3</inlineHelpText>
        <label>Nonprofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Tier_16__c</fullName>
        <description>Internal tier for Coursera partnerships categorization in 2016</description>
        <inlineHelpText>Internal tier for Coursera partnerships categorization in 2016</inlineHelpText>
        <label>2016 Partner Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Platform_Partner_Alias__c</fullName>
        <description>Abbreviated partner alias from platform; select university_short_name from prod.universities (https://tools.coursera.org/mega/query)</description>
        <inlineHelpText>Abbreviated partner alias from platform; select university_short_name from prod.universities (https://tools.coursera.org/mega/query)</inlineHelpText>
        <label>Platform Partner Alias</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Platform_Partner_Display__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean (T/F) whether university is displayed on platform; select university_display from prod.universities (https://tools.coursera.org/mega/query)</description>
        <inlineHelpText>Boolean (T/F) whether university is displayed on platform; select university_display from prod.universities (https://tools.coursera.org/mega/query)</inlineHelpText>
        <label>Platform Partner Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_Partner_ID__c</fullName>
        <description>Numerical University ID from platform data; select university_id from prod.universities (https://tools.coursera.org/mega/query)</description>
        <externalId>true</externalId>
        <inlineHelpText>Numerical University ID from platform data; select university_id from prod.universities (https://tools.coursera.org/mega/query)</inlineHelpText>
        <label>Platform Partner ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Premium_Grading_Setting__c</fullName>
        <description>(ComOps) Indicates whether partner has approved premium grading as a default for new courses that launch going forward.</description>
        <inlineHelpText>(ComOps) Indicates whether partner has approved premium grading as a default for new courses that launch going forward.</inlineHelpText>
        <label>Premium Grading Setting</label>
        <picklist>
            <picklistValues>
                <fullName>Default: premium grading on</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default: premium grading off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium grading: Ask per course</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>It is the account priority created for Industry Partner usage</description>
        <inlineHelpText>Account Priority: this decides available classifications</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reaction_to_Q2_17_PLP_subscriptions__c</fullName>
        <label>Reaction to PLP+subscriptions?</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reaction_to_Q416_Pricing_Experiments__c</fullName>
        <description>How did the Partner respond to the experiments?</description>
        <inlineHelpText>How did the Partner respond to the experiments?</inlineHelpText>
        <label>Reaction to Q416 Pricing Experiments</label>
        <picklist>
            <picklistValues>
                <fullName>Strong Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slightly Negative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strong Negative</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Top</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emerging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Priority</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2016_B2B_Territory1__c</fullName>
        <description>Picklist options for 2016 territory assignment</description>
        <inlineHelpText>Picklist options for 2016 territory assignment</inlineHelpText>
        <label>2016 B2B Territory</label>
        <picklist>
            <picklistValues>
                <fullName>NAMER</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-India APAC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2016_B2B_Tier__c</fullName>
        <description>Reflects 2016 B2B prioritization</description>
        <inlineHelpText>Reflects 2016 B2B prioritization</inlineHelpText>
        <label>2016 B2B Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Named (Proactive)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experimental (Reactive)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>By_Tier_Emerging</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>Platform_Partner_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Tier_16__c</field>
            <operation>equals</operation>
            <value>Emerging</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: Accounts By Tier: Emerging</label>
        <sharedTo>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>By_Tier_Major</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>Platform_Partner_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Tier_16__c</field>
            <operation>equals</operation>
            <value>Major</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: Accounts By Tier: Major</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>By_Tier_Top</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>Platform_Partner_ID__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Partner_Tier_16__c</field>
            <operation>equals</operation>
            <value>Top</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: Accounts By Tier: Top</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Industry_Partner_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Industry_Partner</value>
        </filters>
        <label>Industry Partner Accounts</label>
        <sharedTo>
            <roleAndSubordinates>Manager_Industry_Partner</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ParMa_My_Accounts_Emerging</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Partner_Tier_16__c</field>
            <operation>equals</operation>
            <value>Emerging</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: My Accounts (Emerging)</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ParMa_My_Accounts_Major</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Partner_Tier_16__c</field>
            <operation>equals</operation>
            <value>Major</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: My Accounts (Major)</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ParMa_My_Accounts_Top</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Team</filterScope>
        <filters>
            <field>Partner_Tier_16__c</field>
            <operation>equals</operation>
            <value>Major</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: My Accounts (Top)</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partnership_Managers_My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: All My Accounts</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partnership_Managers_My_Accounts_Top</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_has_no_working_opps__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <label>Partnerships: Accts w/o Active Sourcing</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partnerships_Accounts_Jenny_s_View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>Platform_Partner_ID__c</columns>
        <columns>Default_Course_Certificate_Price__c</columns>
        <columns>Premium_Grading_Setting__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>bec</value>
        </filters>
        <label>Partnerships: Accounts (Jenny&apos;s View)</label>
        <sharedTo>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Partnerships_All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Partner_Tier_16__c</columns>
        <columns>Platform_Partner_ID__c</columns>
        <columns>Technical_Account_Manager__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Partnerships</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>notEqual</operation>
            <value>bec</value>
        </filters>
        <label>Partnerships: All Accounts</label>
        <sharedTo>
            <role>Manager_Global_ParMa</role>
            <role>Manager_US_ParMa</role>
            <roleAndSubordinates>Content_Strategy</roleAndSubordinates>
            <roleAndSubordinates>Finance</roleAndSubordinates>
            <roleAndSubordinates>Legal</roleAndSubordinates>
            <roleAndSubordinates>Marketing</roleAndSubordinates>
            <roleAndSubordinates>T_L</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Industry_Partner</fullName>
        <active>true</active>
        <description>Accounts for Industry Partners</description>
        <label>Industry Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partnerships</fullName>
        <active>true</active>
        <description>Account type for Partnerships</description>
        <label>Partnerships</label>
    </recordTypes>
</CustomObject>